<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">路透社</string>
    
    <string name="cd">contentDescription图片描述</string>
    <string name="msg_load_ing">努力加载中</string>
    <string name="back_exit_tips">再按一次退出程序</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="power">路透社\nBy:mavenly</string>

        <!-- 填充文字 -->
          <string name="title_detail">新闻详情</string>
    <string name="def_xinwen_biaoti">新闻标题</string>
    <string name="def_xinwen_laiyuan">新闻来源</string>
    <string name="def_xinwen_shijian">发表时间</string>
    <!-- xlistview -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
</resources>
