<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="5dp" >

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/item_resource"
        android:text="@string/def_xinwen_biaoti"
        android:maxLines="2"
        android:textColor="#384758" />

    <TextView
        android:id="@+id/item_resource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_time"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/item_title"
        android:gravity="bottom"
        android:textSize="12sp"
        android:text="@string/def_xinwen_shijian" />

    <TextView
        android:id="@+id/item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_title"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/item_title"
        android:gravity="bottom"
        android:textSize="12sp"
        android:text="@string/def_xinwen_laiyuan" 
        android:visibility="invisible"
        />

</RelativeLayout>
</RelativeLayout>